--- a/app_images/Dockerfile-consumer
+++ b/app_images/Dockerfile-consumer
@@ -1,7 +1,7 @@
 FROM python:3.6-slim
 COPY . /app
 WORKDIR /app
-RUN pip install -r docker/requirements.txt
+RUN pip install -r app_images/requirements.txt
 EXPOSE 5002
 ENTRYPOINT [ "python" ]
 CMD [ "src/consumerApp.py" ]
